--- a/index.html
+++ b/index.html
@@ -43,16 +43,11 @@
     <section class="acerca" id="Acerca-de-mi">
         <div class="Derecha">
             <h5 class="rosa">Acerca de mi</h5>
-            <p class="parrafo">Tengo una gran pasión por el diseño y el desarrollo de soluciones innovadoras que resuelven 
-                problemas cotidianos de manera eficiente. Me destaco por mi habilidad para trabajar en equipo 
-                y colaborar con diferentes áreas en un proyecto, como ingeniería, marketing y operaciones. 
-                Poseo experiencia en el uso de herramientas de diseño y programas de CAD para la creación de prototipos y diseños precisos. 
-                Me considero una persona proactiva, con habilidades para resolver problemas y un gran ojo para los detalles. 
-                Me mantengo actualizado con las tendencias y desarrollos en el campo del diseño industrial, y siempre estoy buscando 
-                nuevos desafíos y oportunidades para aprender y crecer en mi carrera. Además, tengo habilidades en liderazgo y capacidad para dirigir proyectos, 
-                lo que me permite asegurar el cumplimiento de los objetivos y metas establecidas. Mi objetivo es trabajar en una empresa innovadora donde pueda 
-                contribuir con mis habilidades y conocimientos para desarrollar productos de alta calidad y diseños estéticamente atractivos que mejoren la vida 
-                de las personas.
+            <p class="parrafo">Tengo habilidades en metodologías de investigación y diseño centrado en el usuario, como entrevistas, encuestas y pruebas de usuario, para comprender las necesidades de los usuarios y diseñar soluciones que satisfagan esas necesidades. También tengo experiencia en el uso de herramientas de diseño como Sketch, Adobe XD, y Figma para crear prototipos y diseños precisos.
+                Soy una persona proactiva y con un gran ojo para los detalles, me mantengo actualizado con las tendencias y desarrollos en el campo del diseño UX/UI y front-end, y siempre estoy buscando nuevos desafíos y oportunidades para aprender y crecer en mi carrera.
+                Además, tengo habilidades en liderazgo y capacidad para dirigir proyectos, lo que me permite asegurar el cumplimiento de los objetivos y metas establecidas.
+                Mi objetivo es trabajar en una empresa innovadora donde pueda contribuir con mis habilidades y conocimientos para desarrollar soluciones digitales que mejoren la experiencia del usuario y generen valor para el negocio.Mi objetivo es trabajar en una empresa innovadora donde pueda contribuir con mis habilidades y conocimientos para desarrollar soluciones digitales que mejoren la experiencia del usuario y generen valor para el negocio.
+                
             </p>
         </div>
         <div class="Derecha">
